Create default pages.

--- a/Frontend/CargoTransportClient/src/app/container/components/home/home.component.html
+++ b/Frontend/CargoTransportClient/src/app/container/components/home/home.component.html
@@ -1,1 +1,9 @@
-<p>home works!</p>
+<main class="container-fluid">
+  <div class="row">
+    <div class="col-3">
+    </div>
+    <div class="col-7 main-image-block">
+      <img class="main-img" [src]="['../../assets/images/transport-min.jpg']" alt="transport" />
+    </div>
+  </div>
+</main>
