--- a/Frontend/CargoTransportClient/src/app/container/components/shared/header/header.component.html
+++ b/Frontend/CargoTransportClient/src/app/container/components/shared/header/header.component.html
@@ -1,1 +1,6 @@
-<p>header works!</p>
+<header>
+  <app-navbar class="navbar"></app-navbar>
+</header>
+<router-outlet></router-outlet>
+
+<footer></footer>
