--- a/Frontend/CargoTransportClient/src/app/container/components/shared/navbar/navbar.component.html
+++ b/Frontend/CargoTransportClient/src/app/container/components/shared/navbar/navbar.component.html
@@ -1,1 +1,16 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg d-flex flex-row justify-content-between">
+  <div class="container-fluid">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+              data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup"
+              aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-link" aria-current="page" [routerLink]="['/']">Home</a>
+        <a class="nav-link" [routerLink]="['/about']">About</a>
+        <a class="nav-link" [routerLink]="['/contact']">Contact</a>
+      </div>
+    </div>
+  </div>
+</nav>
