--- a/Frontend/CargoTransportClient/src/styles.css
+++ b/Frontend/CargoTransportClient/src/styles.css
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+*{
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body{
+  background-color: rgb(0, 0, 0) !important;
+}
+h2,h3,h4,h5,h6{
+  color: rgb(216, 123, 83);
+}
+p{
+  color: rgb(255, 195, 169);
+  font-size: 14px;
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  letter-spacing: 0.4px;
+}
