--- a/Frontend/CargoTransportClient/src/app/container/components/shared/footer/footer.component.html
+++ b/Frontend/CargoTransportClient/src/app/container/components/shared/footer/footer.component.html
@@ -1,1 +1,10 @@
-<p>footer works!</p>
+<footer class="container-fluid">
+  <div class="row">
+    <div class="col-7">
+      <app-contact-icons></app-contact-icons>
+    </div>
+    <div class="col-5">
+      <app-social-icons></app-social-icons>
+    </div>
+  </div>
+</footer>
