--- a/Frontend/CargoTransportClient/src/app/container/components/shared/main/main.component.html
+++ b/Frontend/CargoTransportClient/src/app/container/components/shared/main/main.component.html
@@ -1,3 +1,8 @@
 <app-header></app-header>
-<main></main>
-<app-footer class="position-absolute bottom-0"></app-footer>
+<main>
+  <router-outlet></router-outlet>
+</main>
+
+<app-footer></app-footer>
+
+
