--- a/Frontend/CargoTransportClient/src/app/shared/components/social-icons/social-icons.component.html
+++ b/Frontend/CargoTransportClient/src/app/shared/components/social-icons/social-icons.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div *ngFor="let social of socialMaps | keyvalue" class="col-1">
+    <div *ngFor="let social of socialPlatformsMaps | keyvalue" class="col-1">
       <a class="icon" [href]="social.value" target="_blank">
         <span>
           <fa-icon [icon]="social.key"></fa-icon>
