--- a/Frontend/CargoTransportClient/src/app/container/components/shared/navbar/navbar.component.html
+++ b/Frontend/CargoTransportClient/src/app/container/components/shared/navbar/navbar.component.html
@@ -8,6 +8,7 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" aria-current="page" [routerLink]="['/']">Home</a>
+        <a class="nav-link" [routerLink]="['/shipping-services']">Shipping Services</a>
         <a class="nav-link" [routerLink]="['/about']">About</a>
         <a class="nav-link" [routerLink]="['/contact']">Contact</a>
       </div>
