--- a/Frontend/CargoTransportClient/src/app/company/components/shippment/shippment.component.html
+++ b/Frontend/CargoTransportClient/src/app/company/components/shippment/shippment.component.html
@@ -1,1 +1,9 @@
-<p>shippment works!</p>
+<div class="mb-3">
+  <label for="formGroupExampleInput" class="form-label">Dimensions: </label>
+  <input type="text" class="form-control" id="formGroupExampleInput" placeholder="add dimensions...">
+</div>
+<div class="mb-3">
+  <label for="formGroupExampleInput2" class="form-label">Weight: </label>
+  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="add weight...">
+</div>
+<h6>{{price | currency:'EUR' }}</h6>
