--- a/Frontend/CargoTransportClient/src/styles.css
+++ b/Frontend/CargoTransportClient/src/styles.css
@@ -20,4 +20,7 @@ span{
   color: rgb(174, 106, 24);
   filter:sepia(3)
 }
-
+label{
+  color: rgb(255, 255, 255);
+  text-shadow: 1px 0 2px rgb(255, 195, 169);
+}
